2006-07-10 18:00:14  Sean Middleditch <elanthis@awesomeplay.com>

  * The skin_type value in Race hasn't been used in a while,
    remove it.

2006-07-10 04:15:56  Sean Middleditch <elanthis@awesomeplay.com>

  * All of the character creation code is in C++ as a TelnetMode
    now.  However, the player traits portion of character creation
    is still missing.  That'll come up in the next commit.

2006-07-09 20:07:39  Sean Middleditch <elanthis@awesomeplay.com>

  * Split up the login/main menu code to login.cc and menu.cc.
  * Readying to reimplement character creation as a TelnetMode,
    not as an IProcessor, since character creation is the only
    IProcessor left.  Also, this'll make doing the character
    creation code a bit easier and a lot cleaner, and simplify
    the Player class as well.
  * Remove the IProcessor code completely, as we no longer use it.
  * Disable building of char_create.cc, it will be replaced by
    creation.cc.

2006-07-09 19:03:03  Sean Middleditch <elanthis@awesomeplay.com>

  * Change signature on phrase_match to something a little saner.
  * Begin moving character creation code into C++.
  * Remove script bindings version of Processor/IProcessor.

2006-06-23 17:17:17  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix compilation with gcc 4.1.

2006-06-16 15:48:40  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove DB code.
  * Make Scriptix::Array::Array(count, list) handle list==NULL as
    it's supposed to.

2006-01-25 19:04:02  Sean Middleditch <elanthis@awesomeplay.com>

  * More work on the DB backend.
  * Updated entity factory code to utilize DB.

2006-01-24 21:58:53  Sean Middleditch <elanthis@awesomeplay.com>

  * Fix the alignment problems with the telnet NAWS code so
    sparc works.

2006-01-24 04:55:11  Sean Middleditch <elanthis@awesomeplay.com>

  * More of the db backend is in place.
  * Added a data file which will eventually store the example