@@ -11,11 +11,12 @@
 #include "mud/telnet.h"
 #include "mud/account.h"
 #include "mud/player.h"
+#include "mud/race.h"
 
 class TelnetModeNewCharacter : public ITelnetMode
 {
 	public:
-	enum state_t { STATE_BEGIN = 0, STATE_NAME = 0, STATE_NAME_CONFIRM, STATE_RACE, STATE_RACE_CONFIRM, STATE_GENDER, STATE_STATS, STATE_STATS_CONFIRM, STATE_HEIGHT, STATE_FINAL_CONFIRM, STATE_CONTINUE, STATE_RENAME, STATE_RENAME_CONFIRM
+	enum state_t { STATE_BEGIN = 0, STATE_NAME = 0, STATE_NAME_CONFIRM, STATE_RACE, STATE_RACE_CONFIRM, STATE_GENDER, STATE_HEIGHT, STATE_TRAITS, STATE_TRAITS_CONFIRM, STATE_STATS, STATE_STATS_CONFIRM, STATE_FINAL_CONFIRM, STATE_CONTINUE, STATE_RENAME, STATE_RENAME_CONFIRM
 	};
 	enum height_t { HEIGHT_VERY_SHORT, HEIGHT_SHORT, HEIGHT_AVERAGE, HEIGHT_TALL, HEIGHT_VERY_TALL };
 
@@ -44,6 +45,8 @@ class TelnetModeNewCharacter : public ITelnetMode
 	int stats[CharStatID::COUNT];
 	Race* race;
 	GenderType gender;
+	typedef GCType::map<CharacterTraitID, CharacterTraitValue> TraitMap;
+	TraitMap traits;
 };
 
 #endif
